<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>akmsw</groupId>
  <artifactId>armameeldoparti</artifactId>
  <version>3.0</version>

  <properties>
    <java.version>16</java.version>
    <maven.version>3.9.6</maven.version>
    <maven-compiler.version>3.11.0</maven-compiler.version>
    <maven-enforcer.version>3.2.1</maven-enforcer.version>
    <maven-failsafe.version>3.1.2</maven-failsafe.version>
    <maven-shade.version>3.3.0</maven-shade.version>
    <maven-surefire.version>3.0.0</maven-surefire.version>
    <miglayout.version>11.3</miglayout.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <!-- MiG Layout dependencies -->
    <dependency>
      <groupId>com.miglayout</groupId>
      <artifactId>miglayout-core</artifactId>
      <version>${miglayout.version}</version>
    </dependency>
    <dependency>
      <groupId>com.miglayout</groupId>
      <artifactId>miglayout-swing</artifactId>
      <version>${miglayout.version}</version>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/res</directory>
      </resource>
    </resources>

    <plugins>
      <!-- To configure the Java compiler -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler.version}</version>
        <configuration>
          <release>${java.version}</release>
        </configuration>
      </plugin>

      <!-- To ensure certain conditions are met before building the project -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${maven-enforcer.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>${maven.version}</version>
                </requireMavenVersion>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- To build the final .jar with built-in dependencies -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${maven-shade.version}</version>
        <configuration>
          <!-- To exclude duplicated files -->
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/MANIFEST.MF</exclude>
                <exclude>**/readme/*</exclude>
              </excludes>
            </filter>
          </filters>
          <shadedArtifactAttached>false</shadedArtifactAttached>
          <shadedClassifierName>shaded</shadedClassifierName>
          <transformers>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>armameeldoparti.Main</mainClass>
            </transformer>
          </transformers>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>